Updated basic API capabilities and folders

--- a/config/ApplicationConfig.properties
+++ b/config/ApplicationConfig.properties
@@ -2,6 +2,7 @@ browserName=CHROME_HEADLESS
 appscaleintURL=https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
 appccswebdev=https://crowncommercial.gov.uk
 allPageScreenshot = true
+BaseURL=https://charts.londonstockexchange.com/WebCharts
 
 #Int : https://int.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
 #TST : https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
