Updated methods for API capabilities

--- a/config/ApplicationConfig.properties
+++ b/config/ApplicationConfig.properties
@@ -1,8 +1,9 @@
-browserName=CHROME_HEADLESS
+browserName=CHROME
 appscaleintURL=https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
 appccswebdev=https://crowncommercial.gov.uk
 allPageScreenshot = true
 BaseURL=https://rahulshettyacademy.com
+apiatumation =true
 
 #Int : https://int.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
 #TST : https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
