Updated the framework with enums and 404 response

--- a/config/ApplicationConfig.properties
+++ b/config/ApplicationConfig.properties
@@ -3,7 +3,7 @@ appscaleintURL=https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreem
 appccswebdev=https://crowncommercial.gov.uk
 allPageScreenshot = true
 BaseURL=https://rahulshettyacademy.com
-apiatumation =true
+apiAutomation =false
 
 #Int : https://int.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
 #TST : https://tst.scale.crowncommercial.gov.uk/find-a-commercial-agreement/landing-page?q=
