--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,12 @@
             <artifactId>selenium-support</artifactId>
             <version>${selenium.webdriver.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>${cucumber.version}</version>
-            <scope>test</scope>
+        <!--     <scope>test</scope> -->
         </dependency>
         <dependency>
             <groupId>net.masterthought</groupId>
@@ -186,6 +186,12 @@
             <artifactId>curl-logger</artifactId>
             <version>1.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.1</version>
+        </dependency>
+
     </dependencies>
     <profiles>
         <profile>
