--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,12 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.driver.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/ssm -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ssm</artifactId>
+            <version>2.17.54</version>
+        </dependency>
 
     </dependencies>
     <profiles>
