Refactored code for warnings

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -30,13 +30,13 @@ appender.rolling.strategy.max = 20
 
 # Mention package name here. Classes in this package or subpackages will use ConsoleAppender and RollingFileAppender for logging
 logger.example.name = com.scale
-logger.example.level = debug
+logger.example.level = info
 logger.example.additivity = false
 logger.example.appenderRef.rolling.ref = fileLogger
 logger.example.appenderRef.console.ref = consoleLogger
 
 # Configure root logger for logging error logs in classes which are in package other than above specified package
-rootLogger.level = debug
+rootLogger.level = info
 rootLogger.additivity = false
 rootLogger.appenderRef.rolling.ref = fileLogger
 rootLogger.appenderRef.console.ref = consoleLogger
